--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -40,7 +40,7 @@
 	      <ul class="navbar-nav">
 	        
 	        <li class="nav-item">
-	          <a class="nav-link active" aria-current="page" href="/Assignment2">Home</a>
+	          <a class="nav-link active" aria-current="page" href="/Assignment3">Home</a>
 	        </li>
 	        
 	        <li class="nav-item">
@@ -157,7 +157,7 @@
 
 </div>
 
-    <footer class="bg-light text-center text-lg-start fixed-bottom">
+    <footer class="bg-light text-center text-lg-start bottom">
 	  <!-- Grid container -->
 	  <div class="container p-4">
 	    <!--Grid row-->
