--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -25,7 +25,7 @@
 ></script>
 <title>LOGIN</title>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 
 <h1>Company Name</h1>
     
@@ -152,12 +152,10 @@
 	  </div>
 	</div>
 	<!-- Pills content -->
-	
-	<br><br><br><br><br><br><br><br>
 
 </div>
 
-    <footer class="bg-light text-center text-lg-start bottom">
+    <footer class="bg-light text-center text-lg-start mt-auto">
 	  <!-- Grid container -->
 	  <div class="container p-4">
 	    <!--Grid row-->
